--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
   <title>pigLatin</title>
 </head>
 <body id="body">
+  <header id="header">
+    <h1>
+      PigLatin
+    </h1>
+  </header>
  <script src="script.js"></script>
 </body>
 </html>
